--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,17 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "~2.0.5",
         "yiisoft/yii2-bootstrap": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0"
+        "yiisoft/yii2-swiftmailer": "~2.0.0",
+        "dmstr/yii2-adminlte-asset": "2.*",
+        "leandrogehlen/yii2-treegrid": "*",
+        "weison-tech/yii2-layer": "*",
+        "weison-tech/ueditor": "~1.2.0",
+        "yii2mod/yii2-editable": "*",
+        "bower-asset/fontawesome": "^4.3.0",
+        "bower-asset/blueimp-file-upload": "^9.7.0",
+        "bower-asset/jquery-placeholder": "^2.3.0",
+        "kop/yii2-scroll-pager": "dev-master",
+        "2amigos/yii2-date-time-picker-widget" : "~1.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
