--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "bower-asset/blueimp-file-upload": "^9.7.0",
         "bower-asset/jquery-placeholder": "^2.3.0",
         "kop/yii2-scroll-pager": "dev-master",
-        "2amigos/yii2-date-time-picker-widget" : "~1.0"
+        "2amigos/yii2-date-time-picker-widget" : "~1.0",
+        "2amigos/yii2-arrayquery-component": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
